--- a/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/ftp-deploy.yml
@@ -19,4 +19,5 @@ jobs:
         server: ftp://ftp.delta-web.be
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
+        local-dir: ./build
         server-dir: /delta-web.be/public_html
